fix: covers

--- a/source/sass/partials/_album.scss
+++ b/source/sass/partials/_album.scss
@@ -39,7 +39,7 @@
     }
 
     &--20012022 {
-        background-image: url("../img/pics/albums/2/cover.JPG");
+        background-image: url("../img/pics/albums/2/cover.jpg");
     }
 
     &--04062022 {
@@ -75,7 +75,7 @@
     }
 
     &--11062021 {
-        background-image: url("../img/pics/albums/17/cover.JPG");
+        background-image: url("../img/pics/albums/17/cover.jpg");
     }
 
     &--16072022 {
